# PetClassifier

./: .dockerfile  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: inference.py  main.py  schemas.py  settings.py  utils.py
app/api/: models.py
app/inference/: __init__.py  base_inference.py  classifier.py  ensemble_inference.py  factory.py  mix_inference.py  multitask_inference.py  tta_inference.py
app/models/: __init__.py  metadata.py
app/utils/: mix_inference.py
models/: pet_classifier_v1_20251023-2013.json
tests/: test_api.py
train/: pet-breed-classifier.ipynb
ui/: api_client.py  config.py  dashboard.py  session_state.py  simple_dashboard.py  styles.css  utils.py
ui/components/: __init__.py  footer.py  header.py  instructions.py  model_analytics.py  model_comparison.py  model_info.py  performance_metrics.py  results.py  sidebar.py
utils/: hf_sync.py
